# apresentacao-pi-django

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: Serializers.py  models.py  views.py
core/migrations/: 0001_initial.py
list/: asgi.py  settings.py  urls.py  wsgi.py
